# Hirakell

./: CHANGELOG.md  Hirakell.cabal  README.md
Examples/: MoreMusic.lhs  MusicToSignal.lhs  README.md  TakeFive.hs  final.midi  funGroove.midi  starsAndStripes.midi  t251.lhs  takefive.midi
Examples/Hymn488/: README.md  hymn488-voices.hs
Examples/JazzHoF/: JazzBook.hs  JazzEnsemble.hs  README.md
Examples/RumbaGuaguanco/: RumbaGuaguanco.hs
Examples/c6dim/: README.md
Examples/c7Asc/: ABC.md  README.md  barryC7Unison.midi  barryC7Unison.mscz  c7Asc.hs  music.hs  music.midi
Examples/footprints/: README.md  bass.hs  footprintsInst.midi  tune.hs  tuneInstr.hs
Examples/leCommerce/: LeCommerceFull.hs  LeCommerceFull.midi
HSoM-testing/: CHANGELOG.md  HSoM-testing.cabal  LICENSE  README.md  SSF.midi  cabal.project
HSoM-testing/DrumMUI/: .gitignore  DrumMUI.lhs  README.md
PTGG/: Main.hs  README.md  composition.mid  ptgg-music.cabal
PTGG/Monad/: Main.hs  README.md
Theory/scales/: pentatonic.lhs
Transcriptions/Hymn488/: hymn488.hs  hymn488_satb.mid
Transcriptions/Imagination/: Imagination.hs  Imagination.midi  README.md
docs/: PTGG.md  README.md
docs/pdf/: README.md
examples/: t251.lhs
install/: README.md
install/Haskell/: README.md
midi/: .gitignore  README.md  c-4-qn-t2.midi  c-4-qn-trumpet.midi  c-4-qn.midi  c6dim.lhs  c6dim.midi  c6dimLaTeX.lhs  c6dimLaTeX.tex  fact.lhs  guaguanco.lhs  lyluaTex.tex  musicTex.tex  takeFive.midi  takeV.hs  tune.hs
mobile/: 7nation.hs  7nation.midi  README.md  c-4-qb-t200.midi  c-5-qn.midi
(+11 files in other folders)
